# openapi.yaml
@@ -31,8 +31,46 @@ paths:
               schema:
                 $ref: '#/components/schemas/Todo'
 
+  /todos/{todoID}/state:
+    parameters:
+      - name: todoID
+        in: path
+        required: true
+        schema:
+          type: integer
+          description: ID of the todo to query
+          example: 42
+
+    put:
+      requestBody:
+        content:
+          text/plain:
+            schema:
+              $ref: '#/components/schemas/TodoState'
+      responses:
+        "200":
+          description: State updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Todo'
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        "404":
+          $ref: '#/components/responses/TodoNotFound'
+
 components:
   schemas:
+    ErrorMessage:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+          description: Reason for the error response
+          example: Something has gone terribly wrong.
+
     TodoCollection:
       type: object
       required:
@@ -57,6 +95,11 @@ components:
           type: string
           description: Title of the todo
           example: Fold laundry
+        completedAt:
+          type: string
+          format: date-time
+          description: Instant when the todo was marked as complete
+          example: 2026-05-28T16:32:28Z
 
     NewTodo:
       type: object
@@ -67,3 +110,26 @@ components:
           type: string
           description: Title of the todo
           example: Fold laundry
+
+    TodoState:
+      type: string
+      enum:
+        - complete
+        - incomplete
+      description: A possible state for a todo item
+
+  responses:
+    BadRequest:
+      description: The request was invalid.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorMessage'
+    TodoNotFound:
+      description: No todo found with the given ID
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorMessage'
+          example:
+            message: No todo with ID 7.
